# AcademyNomad

./: .eslintrc.cjs  .gitignore  AGENTS.MD  README.md  components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
src/: App.tsx  colors.css  drag-and-drop.css  fonts.css  globals.css  main.tsx  scrollbar.css  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: delete_file.rs  edit_filename.rs  file_commands.rs  get_everything.rs  get_everything_with_meta.rs  get_highlights_for_files.rs  mod.rs  open_file.rs  open_file_with.rs  set_metadata.rs  show_in_explorer.rs  types.rs  watcher_commands.rs
src-tauri/src/commands/utils/: everything_search.rs  file_info.rs  filetime_to_datetime.rs  get_file_highlights.rs  get_file_info.rs  get_file_info_all_meta.rs  mod.rs  set_creator.rs
src/db/: FilesDB.ts  HighlightsDB.ts  ListsDB.ts  index.ts  migrate.ts  schema.ts  utils.ts
src/db/migrations/: 001-add-file-name-to-highlights.ts  002-add-counters-to-files.ts  003-remove-list-id-from-highlights.ts  004-create-file-lists-junction-table.ts  005-link-highlights-to-files-and-remove-redundant-fields.ts  006-move-pinned-fields-to-file-lists.ts  index.ts  types.ts
src/modules/books-section/: index.tsx  types.ts
src/modules/highlights-section/: index.tsx  types.ts
src/modules/lists/: index.tsx
src/modules/modals/: exclude-modal.tsx  index.tsx  (+2 more)
src/redux/: index.ts  middleware.ts
src/store/: index.ts  types.ts
(+101 files in other folders)
