[package]
name = "anomad"
version = "0.1.0"
description = "AcademyNomad"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
notify = "6.0"
lazy_static = "1.4"
tokio = { version = "1.0", features = ["time"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6", features = ["devtools"] }
regex = "1.10"
tauri-plugin-dialog = "2"
everything-rs = "0.1.10"
chrono = "0.4"
tauri-plugin-store = "2"
file-id = "0.2.2"
fs2 = "0.4"
tauri-plugin-fs = "2"
lopdf = "0.32"
pdfium-render = "0.8.35"
rayon = "1.7"
xmp_toolkit = "1.10"
anyhow = "1.0"
rand = "0.8"
encoding_rs = "0.8" # Для правильной декодировки строк PDF
